# TrafficLight-Generator

TFFSIGN_generator/: CMakeLists.txt  package.xml
TFFSIGN_generator/src/: TFF_SIG_generator.cpp
